--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,4 +33,5 @@ pages:
 check_l10n:
   stage: test
   script: 
-    - 'grep -r '] (' i18n/*.po >&2 && echo 'TEST FAILED: Broken links''
+    - 'test-links=$(grep -r "] ("" i18n/*.po >&2 && echo "TEST FAILED: Broken links")'
+    - test-links
