--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -82,6 +82,12 @@ order = order-last
 url = /he/
 language = עברית (he)
 
+[hi]
+direction = text-left
+order = order-last
+url = /hi/
+language = हिन्दी (hi)
+
 [hr]
 direction = text-left
 order = order-last
