--- a/.htaccess
+++ b/.htaccess
@@ -13,8 +13,8 @@ RewriteRule ^(en-US|en)$ / [R=302,L]
 RewriteRule ^(en-US|en)/(.*) /$2 [R=302,L]
 
 # Rewrites for languages that have a different mapping in the page
-RewriteRule ^(es-ES|es-MX|es-CO)$ /es [R=302,L]
-RewriteRule ^(es-ES|es-MX|es-CO)/(.*) /es/$2 [R=302,L]
+RewriteRule ^(es-ES|es-MX|es-CO|es-AR)$ /es [R=302,L]
+RewriteRule ^(es-ES|es-MX|es-CO|es-AR)/(.*) /es/$2 [R=302,L]
 
 # Rewrites for languages that have a Tor Browser release
 # but don't have a translated manual
