--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,13 @@ before_script:
     - pip3 install wheel
     - pip3 install lektor
     - echo 'checking out translations'
+    - >
+      if [[ ! -d "i18n" ]]; then
+        cd i18n && git checkout tbmanual-contentspot && git reset --hard && git pull && cd ..
+      else
+        git clone https://git.torproject.org/translation.git i18n
+        cd i18n && git checkout tbmanual-contentspot && cd ..
+      fi
     - rm -rf i18n
     - git clone https://git.torproject.org/translation.git i18n
     - cd i18n && git checkout tbmanual-contentspot && cd ..
