--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ before_script:
     - pip3 install lektor
     - echo 'checking out translations'
     - >
-      if [[ ! -d "i18n" ]]; then
+      if [ "i18n" ]; then
         cd i18n && git checkout tbmanual-contentspot && git reset --hard && git pull && cd ..
       else
         git clone https://git.torproject.org/translation.git i18n
