--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ variables:
     GIT_SUBMODULE_STRATEGY: recursive
 
 before_script:
-    - *.apt-template
+    - *apt-template
     - DEBIAN_FRONTEND=noninteractive apt-get install gettext python3-babel python3-pip git python3-inifile python3-dev python3-setuptools python3-openssl python3-cryptography i18nspector -y
     - pip3 install virtualenv
     - virtualenv venv
