move job to master, part of https://gitlab.torproject.org/tpo/web/manual/-/issues/89 remove unnecessary rule that was preventing job to occur

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,13 +60,10 @@ pages:
       - public
       - i18n
   only:
-    - translations
+    - master
 
 check_l10n:
   script:
     - git clone https://gitlab.torproject.org/tpo/community/l10n.git
     - pip3 install polib
     - l10n/bin/check_markdown_links.py i18n/
-  rules:
-    - changes:
-      - i18n/*
