--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,18 +40,18 @@ before_script:
     - pip3 install wheel
     - pip3 install lektor
     - echo 'checking out translations'
-    - >
-      if [ "i18n" ]; then
-        cd i18n && git checkout tbmanual-contentspot && git reset --hard && git pull && cd ..
-      else
-        git clone https://git.torproject.org/translation.git i18n
-        cd i18n && git checkout tbmanual-contentspot && cd ..
-      fi
+    - rm -rf i18n
+    - git clone https://git.torproject.org/translation.git i18n
+    - cd i18n && git checkout tbmanual-contentspot && cd ..
+    - git clone https://gitlab.torproject.org/tpo/community/l10n.git
+    - pip3 install polib
 
 pages:
   script:
     - echo 'building lektor 3 times to get translations in place'
     - lektor build --output-path public && lektor build --output-path public && lektor build --output-path public
+    - echo 'lets see if there are any updates in the strings for translation'
+    - l10n/bin/check_po_status.py tbmanual-contentspot
   artifacts:
     paths:
       - public
@@ -61,6 +61,4 @@ pages:
 
 check_l10n:
   script:
-    - git clone https://gitlab.torproject.org/tpo/community/l10n.git
-    - pip3 install polib
     - l10n/bin/check_markdown_links.py i18n/
