remove wheels, we dont use it. reinstall all plugins because there seems to be a problem with l10n. remove before cloning to prevent failures when folder is already there

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,6 @@ before_script:
     - pip3 install virtualenv
     - virtualenv venv
     - source venv/bin/activate
-    - pip3 install wheel
     - pip3 install lektor
     - echo 'checking out translations'
     - rm -rf i18n
@@ -47,6 +46,7 @@ before_script:
 pages:
   script:
     - echo 'building lektor 3 times to get translations in place'
+    - lektor plugins reinstall
     - lektor build --output-path public && lektor build --output-path public && lektor build --output-path public
   artifacts:
     paths:
@@ -57,6 +57,7 @@ pages:
 
 check_l10n:
   script:
+    - rm -rf l10n/
     - git clone https://gitlab.torproject.org/tpo/community/l10n.git
     - pip3 install polib
     - l10n/bin/check_markdown_links.py i18n/
