add Swahili to translations preview. will-fix: https://gitlab.torproject.org/tpo/community/l10n/-/issues/40041

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -208,6 +208,12 @@ order = order-last
 url = /sv-SE/
 language = Svenska (sv)
 
+[sw]
+direction = text-left
+order = order-last
+url = /sw/
+language = Swahili (sw)
+
 [th]
 direction = text-left
 order = order-last
