add Magyar(Hungarian) translation. will-fix: https://gitlab.torproject.org/tpo/web/manual/-/issues/103

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -58,6 +58,12 @@ order = order-last
 url = /he/
 language = עברית (he)
 
+[hu]
+direction = text-left
+order = order-last
+url = /hu/
+language = Magyar nyelv (hu)
+
 [id]
 direction = text-left
 order = order-last
