--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,34 +29,24 @@ cache:
 variables:
     GIT_SUBMODULE_STRATEGY: recursive
 
-before_script:
+pages:
+  script:
     - *apt-template
-    - DEBIAN_FRONTEND=noninteractive apt-get install gettext python3-babel python3-pip git python3-inifile python3-dev python3-setuptools python3-openssl python3-cryptography i18nspector -y
-    - pip3 install virtualenv
-    - virtualenv venv
-    - source venv/bin/activate
+    - DEBIAN_FRONTEND=noninteractive apt-get apt-utils install gettext python3-babel python3-pip git python3-inifile python3-dev python3-setuptools python3-openssl python3-cryptography i18nspector -y
     - pip3 install lektor
     - echo 'checking out translations'
     - rm -rf i18n
-    - git clone https://git.torproject.org/translation.git i18n
-    - cd i18n && git checkout tbmanual-contentspot && cd ..
-    - git clone https://gitlab.torproject.org/tpo/community/l10n.git
-    - pip3 install polib
-
-pages:
-  script:
+    - git clone --branch tbmanual-contentspot https://git.torproject.org/translation.git i18n
     - echo 'building lektor 3 times to get translations in place'
     - lektor plugins reinstall
     - lektor build --output-path public && lektor build --output-path public && lektor build --output-path public
+    - echo 'ok, we built it! now we will make some tests'
+    - pip3 install polib
+    - git clone https://gitlab.torproject.org/tpo/community/l10n.git
     - echo 'lets see if there are any updates in the strings for translation'
     - l10n/bin/check_po_status.py tbmanual-contentspot
+    - echo 'lets see if there are any broken links on the translations'
+    - l10n/bin/check_markdown_links.py i18n/
   artifacts:
     paths:
       - public
-      - i18n
-  only:
-    - master
-
-check_l10n:
-  script:
-    - l10n/bin/check_markdown_links.py i18n/
