--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,9 +65,20 @@ check_new_strings:
       - venv
   stage: test_l10n
   needs: [pages]
-  except:
-    - merge_requests
+  only:
+    refs:
+      - merge_requests
+    changes:
+      - content/**/*
+      - templates/**/*
   script:
+    - *apt-template
+    - DEBIAN_FRONTEND=noninteractive apt-get install gettext python3-babel python3-pip git python3-inifile python3-dev python3-setuptools python3-openssl python3-cryptography i18nspector apt-utils -y
+    - pip3 install virtualenv
+    - virtualenv venv
+    - source venv/bin/activate
+    - pip3 install lektor
+    - lektor plugins reinstall
     - echo 'building lektor 3 more times to get translations in place'
     - lektor build --output-path public && lektor build --output-path public && lektor build --output-path public
     - echo 'ok, we built it! now we will make some tests'
