--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,7 +73,7 @@ check_new_strings:
       - templates/**/*
   script:
     - *apt-template
-    - DEBIAN_FRONTEND=noninteractive apt-get install gettext python3-babel python3-pip git python3-inifile python3-dev python3-setuptools python3-openssl python3-cryptography i18nspector apt-utils -y
+    - DEBIAN_FRONTEND=noninteractive apt-get install gettext python3-babel python3-pip git python3-inifile python3-dev python3-setuptools python3-openssl python3-cryptography i18nspector apt-utils python3-polib -y
     - pip3 install virtualenv
     - virtualenv venv
     - source venv/bin/activate
@@ -82,7 +82,6 @@ check_new_strings:
     - echo 'building lektor 3 more times to get translations in place'
     - lektor build --output-path public && lektor build --output-path public && lektor build --output-path public
     - echo 'ok, we built it! now we will make some tests'
-    - pip3 install polib
     - git clone https://gitlab.torproject.org/tpo/community/l10n.git
     - echo 'lets see if there are any updates in the strings for translation'
     - l10n/bin/check_po_status.py tbmanual-contentspot
@@ -106,5 +105,6 @@ check_l10n:
   only:
     - translations
   script:
+    - DEBIAN_FRONTEND=noninteractive apt-get install gettext i18nspector python3-polib -y
     - echo 'lets see if there are any broken links on the translations'
     - l10n/bin/check_markdown_links.py i18n/
