add Estonian to preview

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -58,6 +58,12 @@ order = order-last
 url = /es/
 language = Español (es)
 
+[et]
+direction = text-left
+order = order-last
+url = /et/
+language = Eesti (et)
+
 [fa]
 direction = text-right
 order = order-last
