more content updates

--- a/databags/topics.ini
+++ b/databags/topics.ini
@@ -16,7 +16,7 @@ label = Running Tor Browser for the First Time
 
 [circumvention]
 path = circumvention
-label = Censorship Circumvention
+label = Circumvention
 
 [bridges]
 path = bridges
