--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -100,6 +100,12 @@ order = order-last
 language = македонски (mk)
 url = /mk/
 
+[my]
+direction = text-left
+order = order-last
+language = မြန်မာဘာသာ (my)
+url = /my/
+
 [pt-BR]
 direction = text-left
 order = order-last
