--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -83,14 +83,13 @@ check_new_strings:
   script:
     - *apt-template
     - DEBIAN_FRONTEND=noninteractive apt-get install gettext git python3-dev python3-setuptools i18nspector python3-polib python3-requests ca-certificates apt-utils -y
-    - git clone https://gitlab.torproject.org/tpo/community/l10n.git
+    - git clone --depth=1 https://gitlab.torproject.org/tpo/community/l10n.git
     - echo 'lets see if there are any UPDATES ON THE STRINGS for translation after this changes'
     - l10n/bin/check_po_status.py $TRANSLATION_BRANCH
   artifacts:
     paths:
       - public
       - i18n
-      - l10n
 
 check_l10n:
   allow_failure: true
@@ -108,9 +107,10 @@ check_l10n:
   only:
     - translations
   script:
+    - *apt-template
     - DEBIAN_FRONTEND=noninteractive apt-get install gettext i18nspector python3-polib ca-certificates -y
     - rm -rf l10n
-    - git clone https://gitlab.torproject.org/tpo/community/l10n.git
+    - git clone --depth=1 https://gitlab.torproject.org/tpo/community/l10n.git
     - echo 'lets see if there are any BROKEN LINKS on the translations'
     - l10n/bin/check_markdown_links.py i18n/
 
