start deploying site to staticsync from main branch
This will make merges on GitLab publish the site directly to the
live, production static mirror site system from here on.

This may not yet work because we need configuration on the server side
as well.

The private key was configured in the project's CI/CD variables.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,8 @@ image: debian:buster-slim
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
   PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
+  SITE_URL: tb-manual.torproject.org
+  SUBDIR: public/
 
 workflow:
   rules:
@@ -40,6 +42,9 @@ workflow:
       variables:
         TRANSLATION_BRANCH: "tpo-web"
 
+include:
+  project: tpo/tpa/ci-templates
+  file: static-shim-deploy.yml
 
 stages:
     - build
