--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,10 @@
+image: python:3.8-bullseye
 # This template should be usable on any system that's based on apt.
 # taken from tor gitlabci
 
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
   PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
-  SITE_URL: tb-manual.torproject.org
   SUBDIR: public/
   TRANSLATION_BRANCH: "tbmanual-contentspot"
 
