--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ image: python:3.8-bullseye
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
   PIP_CACHE_DIR: "$CI_PROJECT_DIR/.cache/pip"
-  SUBDIR: public/
+  SUBDIR: public/manual/
   TRANSLATION_BRANCH: "tbmanual-contentspot"
 
 include:
