add Khmer, Korean and Chinese(TW) language translations

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -88,6 +88,18 @@ order = order-last
 language = ქართული ენა (ka)
 url = /ka/
 
+[km]
+direction = text-left
+order = order-last
+language = ភាសាខ្មែរ (km)
+url = /km/
+
+[ko]
+direction = text-left
+order = order-last
+language = 한국어(ko)
+url = /ko/
+
 [lt]
 direction = text-left
 order = order-last
@@ -147,3 +159,9 @@ direction = text-left
 order = order-last
 url = /zh-CN/
 language = 简体中文 (zh-CN)
+
+[zh-TW]
+direction = text-left
+order = order-last
+url = /zh-TW/
+language = 正體字 (zh-TW)
