--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 ---
 variables:
   SITE_URL: tb-manual.torproject.org
+  STAGING_URL: tb-manual.staging.torproject.net
   TRANSLATION_BRANCH: tbmanual-contentspot
 
 include:
