fix name for ka. part of tpo/web/tpo#302

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -85,7 +85,7 @@ language = Íslenska (is)
 [ka]
 direction = text-left
 order = order-last
-language = ქართული ენა (ka)
+language = ქართული (ka)
 url = /ka/
 
 [km]
