clean language forwards. fix Irish. ref: tpo/web/tpo#345

--- a/assets/.htaccess
+++ b/assets/.htaccess
@@ -25,3 +25,6 @@ RewriteRule ^(cs|da|fa|ja|ms|nb-NO|nl|pl|sv-SE|vi)/(.*) /$2 [R=302,L]
 # we have only one translation for this locales
 RewriteRule ^bn-(BD|IN)$ /bn [R=302,L]
 RewriteRule ^bn-(BD|IN)/(.*) /bn/$2 [R=302,L]
+RewriteRule ^ga-IE(.*) /ga$1 [R=302,L]
+RewriteRule ^ga-IE$ /ga [R=302,L]
+
