add Ukrainian translation

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -160,6 +160,12 @@ order = order-last
 url = /tr/
 language = Türkçe (tr)
 
+[uk]
+direction = text-left
+order = order-last
+url = /uk/
+language  = українська (uk)
+
 [zh-CN]
 direction = text-left
 order = order-last
