Add Persian translation

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -40,6 +40,12 @@ order = order-last
 url = /es/
 language = Español (es)
 
+[fa]
+direction = text-right
+order = order-last
+url = /fa/
+language = فارسی (fa)
+
 [fr]
 direction = text-left
 order = order-last
