--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -40,6 +40,12 @@ order = order-last
 url = /es/
 language = Español (es)
 
+[fa]
+direction = text-right
+order = order-last
+url = /fa/
+language = فارسی (fa)
+
 [fr]
 direction = text-left
 order = order-last
@@ -142,6 +148,12 @@ order = order-last
 url = /ru/
 language = Русский (ru)
 
+[sq]
+direction = text-left
+order = order-last
+url = /sq/
+language = Shqip (sq)
+
 [th]
 direction = text-left
 order = order-last
@@ -153,6 +165,12 @@ direction = text-left
 order = order-last
 url = /tr/
 language = Türkçe (tr)
+
+[uk]
+direction = text-left
+order = order-last
+url = /uk/
+language  = українська (uk)
 
 [zh-CN]
 direction = text-left
