Use lektor-scss to build scss

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 ---
 variables:
+  LEKTOR_BUILD_FLAGS: scss
   SITE_URL: tb-manual.torproject.org
   STAGING_URL: tb-manual.staging.torproject.net
   TRANSLATION_BRANCH: tbmanual-contentspot
