add Polish and Vietnamese translations

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -124,6 +124,12 @@ order = order-last
 language = မြန်မာဘာသာ (my)
 url = /my/
 
+[pl]
+direction = text-left
+order = order-last
+url = /pl/
+language = polski (pl)
+
 [pt-BR]
 direction = text-left
 order = order-last
@@ -171,6 +177,12 @@ direction = text-left
 order = order-last
 url = /uk/
 language  = українська (uk)
+
+[vi]
+direction = text-left
+order = order-last
+url = /vi/
+language  = Tiếng Việt (vi)
 
 [zh-CN]
 direction = text-left
