add Finnish (Suomi) version. many thanks to translator olavinto. will-fix: tpo/web/manual#143

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -46,6 +46,12 @@ order = order-last
 url = /fa/
 language = فارسی (fa)
 
+[fi]
+direction = text-left
+order = order-last
+url = /fi/
+language = Suomi (fi)
+
 [fr]
 direction = text-left
 order = order-last
