--- a/configs/i18n.ini
+++ b/configs/i18n.ini
@@ -1,5 +1,5 @@
 content = en
-translations = ar,bn,ca,de,el,es,fa,fr,ga,he,hu,id,is,it,ka,km,ko,lt,mk,my,pl,pt-BR,pt-PT,ro,ru,sq,th,tr,uk,vi,zh-CN,zh-TW
+translations = ar,bn,ca,de,el,es,fa,fi,fr,ga,he,hu,id,is,it,ka,km,ko,lt,mk,my,pl,pt-BR,pt-PT,ro,ru,sq,th,tr,uk,vi,zh-CN,zh-TW
 i18npath = i18n
 url_prefix = https://tb-manual.torproject.org/
 translate_paragraphwise = False
