--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -200,4 +200,4 @@ language = 简体中文 (zh-CN)
 direction = text-left
 order = order-last
 url = /zh-TW/
-language = 正體字 (zh-TW)
+language = 正體中文 (zh-TW)
