add Swahili translation. will-fix: tpo/web/manual#144

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -166,6 +166,12 @@ order = order-last
 url = /sq/
 language = Shqip (sq)
 
+[sw]
+direction = text-left
+order = order-last
+url = /sw/
+language = Kiswahili (sw)
+
 [th]
 direction = text-left
 order = order-last
