correct name of Arabic language. part of tpo/community/l10n#40116

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -8,7 +8,7 @@ language = English (en-US)
 direction = text-right
 order = order-last
 url = /ar/
-language = عربية (ar)
+language = العربية (ar)
 
 [bn]
 direction = text-left
