add ja, tk translations. closes: tpo/web/manual#156

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -94,6 +94,12 @@ order = order-last
 url = /is/
 language = Íslenska (is)
 
+[ja]
+direction = text-left
+order = order-last
+language = 日本語 (ja)
+url = /ja/
+
 [ka]
 direction = text-left
 order = order-last
@@ -177,6 +183,12 @@ direction = text-left
 order = order-last
 url = /th/
 language = ภาษาไทย (th)
+
+[tk]
+direction = text-left
+order = order-last
+url = /tk/
+language = türkmençe (tk)
 
 [tr]
 direction = text-left
