--- a/databags/topics.ini
+++ b/databags/topics.ini
@@ -14,6 +14,10 @@ label = Installation
 path = running-tor-browser
 label = Running Tor Browser for the First Time
 
+[anti-fingerprinting]
+path = anti-fingerprinting
+label = Anti-fingerprinting
+
 [circumvention]
 path = circumvention
 label = Circumvention
