add Belarusian, Bulgarian, Pashto and Wolof translations

--- a/databags/alternatives.ini
+++ b/databags/alternatives.ini
@@ -10,6 +10,18 @@ order = order-last
 url = /ar/
 language = العربية (ar)
 
+[be]
+direction = text-left
+order = order-last
+url = /be/
+language = беларуская (be)
+
+[bg]
+direction = text-left
+order = order-last
+url = /bg/
+language = български (bg)
+
 [bn]
 direction = text-left
 order = order-last
@@ -142,6 +154,12 @@ order = order-last
 url = /pl/
 language = polski (pl)
 
+[ps]
+direction = text-right
+order = order-last
+url = /ps/
+language = پښتو (ps)
+
 [pt-BR]
 direction = text-left
 order = order-last
@@ -207,6 +225,12 @@ direction = text-left
 order = order-last
 url = /vi/
 language  = Tiếng Việt (vi)
+
+[wo]
+direction = text-left
+order = order-last
+url = /wo/
+language  = Wolof (wo)
 
 [zh-CN]
 direction = text-left
